# soyo

./: pyproject.toml  tradingbot.py
src/: akshare_fetcher.py  data_fetcher.py  fetcher.py  watchlist.json
