[project]
name = "mytradingagent"
version = "0.1.0"
description = "Daily stock index data reporter to QQ"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "apscheduler>=3.10.0",
    "qq-botpy>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]
